# AudioEngine

./: ANTIALIASING_NOTES.md  BIT_DEPTH_FIX.md  GPU_OPTIMIZATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  PINK_NOISE_OPTIMIZATION.md  README.md  STREAMING_HEADROOM.md  app.py  audio_engine.py  baby_brown_noise_5_secs.flac  baby_noise_engine.py  baby_white_noise_10_secs.flac  baby_white_noise_2_secs.flac  baby_white_noise_5_secs.flac  colab_usage_guide.md  cuda_accelerator.py  example_usage.ipynb  loudness_processor.py  metadata_handler.py  noise_generators.py  pyproject.toml  requirements.txt  setup.py  test_16bit.flac  test_24bit.flac  test_bit_depths.py  test_improvements.py  test_noise_consistency.py  test_peak_1dB.flac  test_peak_2dB.flac  test_peak_3dB.flac  test_peak_limit.py  test_pink_noise_efficiency.py  therapeutic_processor.py
audio_engine/: __init__.py
audio_engine/algorithms/: __init__.py  brown_noise.py  pink_noise.py  white_noise.py
audio_engine/core/: __init__.py  noise_generator.py
audio_engine/processors/: __init__.py  loudness_processor.py  therapeutic_processor.py
audio_engine/utils/: __init__.py  cuda_accelerator.py  metadata_handler.py
examples/: advanced_features.py  basic_usage.py  colab_notebook_template.py  google_colab_demo.py
tests/: __init__.py  run_tests.py  test_noise_generation.py  test_therapeutic_processing.py  test_youtube_compliance.py
